--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-flask
-flask_pymongo
-os
+click==8.0.4
+Flask==2.0.3
+Flask-PyMongo==2.3.0
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+pymongo==4.0.2
+Werkzeug==2.0.3
